<resources>
    <string name="app_name">Palindrome</string>
    <string name="title_documents_check">Дані водіїв</string>
    <string name="title_add_violation_short">Порушення</string>
    <string name="title_add_violation">Додати порушення</string>
    <string name="title_profile">Мої дані</string>
    <string name="title_token">Номер жетона</string>
    <string name="title_department">Відділення</string>
    <string name="read_geo_position">Зчитати</string>
    <string name="title_car_number">Номер автомобіля</string>
    <string name="title_location">Місце фіксації</string>
    <string name="title_violation_type">Порушення</string>
    <string name="add_button">Додати</string>
    <string name="login_button">Вхід</string>
    <string name="title_password">Пароль</string>
    <string name="title_email">Електронна пошта</string>
    <string name="violation_added">Порушення успішно додано</string>
    <string name="settings_item_title">Налаштування</string>
    <string name="enable_two_step_auth_title">Двох етапна аутентифікація</string>
    <string name="confirm_new_device">Підтвердіть вхід з нового пристрою</string>
    <string name="confirm_two_step_button_title">Підтвердити</string>
    <string name="reject_two_step_button_title">Відмінити</string>
    <string name="search_driver_hint">Пошук водія за ПІБ</string>
    <string name="search_driver_button_title">Знайти</string>
    <string name="home_title">Шукай та знаходь!</string>
    <string name="home_text">Вся необхідна інформація про водіїв доступна тут і зараз. Здійснюйте пошук за ПІБ водія аби переглянути номер його посвідчення та якими автомобілями він володіє. Ми прагнемо зробити всі процеси вашої роботи максимально ефективними. Адже безпека на дорозі - це головне!</string>
    <string name="team_signature">Команда Palindrome</string>
    <string name="loading_text">Завантаження..</string>
    <string name="nothing_found_text">Нічого не знайдено</string>
    <string name="violations_title">Порушення</string>
    <string name="cars_title">Автомобілі</string>
    <string name="car_number_title">Номер:</string>
    <string name="body_number_title">VIN код:</string>
    <string name="weight_title">Вага:</string>
    <string name="engine_title">Двигун:</string>
    <string name="status_title">Статус:</string>
    <string name="location_title">Місце фіксації:</string>
    <string name="date_time_title">Дата та час:</string>
    <string name="paid_text">Оплачено</string>
    <string name="unpaid_text">Очікує оплати</string>
    <string name="no_details_text">Тут нічого..</string>
    <string name="submit_button_text">Підтвердити</string>
    <string name="two_step_auth_code">Код аутентифікації</string>
    <string name="two_step_code_sent_text">На вашу електронну пошту був відправлений код двох факторної аутентифікації. Впишіть його в поле вище аби підтвердити свою особистість.</string>
</resources>
