<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_documents_check">

    <fragment
        android:id="@+id/navigation_documents_check"
        android:name="com.drofff.palindrome.ui.home.HomeFragment"
        android:label="@string/title_documents_check"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_violation_add"
        android:name="com.drofff.palindrome.ui.violation.AddViolationFragment"
        android:label="@string/title_add_violation"
        tools:layout="@layout/fragment_add_violation" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.drofff.palindrome.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>