<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TwoStepAuthActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="300dp"
        android:layout_height="90dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.232">

        <EditText
            android:id="@+id/two_step_auth_token_field"
            android:layout_width="260dp"
            android:layout_height="73dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@android:color/white"
            android:ems="10"
            android:hint="@string/two_step_auth_code"
            android:inputType="number" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:backgroundTint="@color/hint_card_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView4"
        app:layout_constraintVertical_bias="0.206">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="280dp"
            android:layout_height="130dp"
            android:layout_marginStart="11dp"
            android:layout_marginTop="11dp"
            android:fontFamily="serif-monospace"
            android:text="@string/two_step_code_sent_text"
            android:textColor="@color/hint_card_text"
            android:textSize="16sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/complete_two_step_auth_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/buttons"
        android:text="@string/submit_button_text"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.807"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView5"
        app:layout_constraintVertical_bias="0.27" />

</androidx.constraintlayout.widget.ConstraintLayout>