<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverActivity">

    <ImageView
        android:id="@+id/driver_image_value"
        android:layout_width="120dp"
        android:layout_height="152dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/driver_full_name_value"
        android:layout_width="182dp"
        android:layout_height="wrap_content"
        android:text="@string/loading_text"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.552"
        app:layout_constraintStart_toEndOf="@+id/driver_image_value"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/driver_licence_number_value"
        android:layout_width="175dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/driver_full_name_value"
        app:layout_constraintTop_toBottomOf="@+id/driver_full_name_value"
        app:layout_constraintVertical_bias="0.028" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/details_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_tabs"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/driver_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/driver_image_value"
        app:layout_constraintVertical_bias="0.099">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/cars_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cars_title" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/violations_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/violations_title" />

    </com.google.android.material.tabs.TabLayout>

    <ProgressBar
        android:id="@+id/driver_loader"
        style="?android:attr/progressBarStyle"
        android:layout_width="131dp"
        android:layout_height="133dp"
        android:indeterminateTint="@color/colorPrimary"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/details_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.207" />

    <TextView
        android:id="@+id/no_details_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_details_text"
        android:textSize="19sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/details_view"
        app:layout_constraintVertical_bias="0.112" />

</androidx.constraintlayout.widget.ConstraintLayout>